[package]
name = "chua"
version = "0.1.0"
authors = ["gengteng <me@gteng.org>"]
edition = "2018"
license = "MIT"
description = "A client that uploads file upload in chunks."
repository = "https://github.com/live2o3/chua"
homepage = "https://github.com/live2o3/chua"

[dependencies]
tokio = { version = "0.2", features = [ "full" ]}
reqwest = { version = "0.10", default-features = false, features = [ "json", "rustls-tls" ]}
futures = "0.3"
structopt = "0.3"
lazy_static = "1.4"

[[bin]]
path = "src/bin/main.rs"
name = "chua"