[package]
name = "chua"
version = "1.0.0"
authors = ["gengteng <me@gteng.org>"]
edition = "2018"
license = "MIT"
description = "A client that uploads file upload in chunks."
repository = "https://github.com/live2o3/chua"
homepage = "https://github.com/live2o3/chua"

[dependencies]
reqwest = { version = "0.10", default-features = false, features = [ "json", "rustls-tls" ]}
futures = "0.3"
lazy_static = "1.4"
futures-channel = "0.3"
md5 = "0.7.0"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
tokio = {version = "0.2", features = ["full"]}

[target."cfg(target_arch = \"wasm32\")".dependencies]
wasm-bindgen = "0.2.67"
web-sys = { version = "0.3.44", features = ["Blob", "File", "FileReader", "FileCallback", "Window", "Location"]}
js-sys = { version = "0.3.44" }
gloo-file = { version = "0.1.0", features = ["futures"] }
wasm-bindgen-futures = "0.4.17"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.uuid]
version = "0.8.1"
features = ["serde", "v4"]

[target."cfg(target_arch = \"wasm32\")".dependencies.uuid]
version = "0.8.1"
features = ["serde", "v4", "wasm-bindgen"]

[workspace]
members = [
    "chua-cli"
]