[package]
name = "chua"
version = "1.0.0"
authors = ["gengteng <me@gteng.org>"]
edition = "2018"
license = "MIT"
description = "A client that uploads file upload in chunks."
repository = "https://github.com/live2o3/chua"
homepage = "https://github.com/live2o3/chua"

[dependencies]
reqwest = { version = "0.10", default-features = false, features = [ "json", "rustls-tls" ]}
futures = "0.3"
lazy_static = "1.4"
futures-channel = "0.3"
md5 = "0.7.0"
log = "0.4.11"
serde = { version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
uuid = {version = "0.8.1", features = ["serde"]}
thiserror = "1"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
tokio = {version = "0.2", features = ["full"]}
num_cpus = "1.13.0"

[target."cfg(target_arch = \"wasm32\")".dependencies]
wasm-bindgen = "0.2.67"
web-sys = { version = "0.3.44", features = ["File"]}
js-sys = { version = "0.3.44" }
wasm-bindgen-futures = "0.4.17"

[workspace]
members = [
    "chua-cli",
    "chua-server",
    "chua4c",
    "chua4j",
    "chua4js"
]