[package]
name = "chua-cli"
version = "0.1.0"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chua = { path = ".." }
structopt = "0.3"
tokio = { version = "0.2", features = [ "full" ]}
url = "2.1.1"
