[package]
name = "chua-cli"
version = "1.0.0"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"
license = "MIT"
description = "Client for uploading files in chunks"
repository = "https://github.com/live2o3/chua"
homepage = "https://github.com/live2o3/chua"
readme = "README.md"

[dependencies]
chua = { path = ".." }
structopt = "0.3"
tokio = { version = "0.2", features = [ "full" ]}
url = "2.1.1"
