[package]
name = "chua-server"
version = "0.1.0"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chua = { path = ".." }
structopt = "0.3"
tokio = { version = "0.2", features = [ "full" ]}
warp = { version = "0.2.4" }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde_json = "1.0.57"