[package]
name = "chua-server"
version = "1.0.0"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"
license = "MIT"
description = "Server for uploading files in chunks"
repository = "https://github.com/live2o3/chua"
homepage = "https://github.com/live2o3/chua"
readme = "README.md"

[dependencies]
chua = { path = ".." }
structopt = "0.3"
bytes = "0.5.6"
tokio = { version = "0.2", features = [ "full" ]}
warp = { version = "0.2.4" }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde_json = "1.0.57"
futures-util = "0.3.5"
log = "0.4.11"
env_logger = "0.7.1"