[package]
name = "chua4c"
version = "1.0.0"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"
license = "MIT"
description = "Library for uploading files in chunks"
repository = "https://github.com/live2o3/chua"
homepage = "https://github.com/live2o3/chua"
readme = "README.md"

[dependencies]
chua = { path = ".."}

[lib]
crate-type = ["cdylib", "staticlib"]
