[package]
name = "chua4j"
version = "0.1.0"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chua = { path = ".."}
jni = "0.17.0"
tokio = { version = "0.2", features = ["full"]}

[target."cfg(not(target_os = \"android\"))".dependencies]
android_logger = "0.9.0"
log = "0.4"

[lib]
crate-type = ["cdylib"]