[package]
name = "chua4j"
version = "1.0.0"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"
license = "MIT"
description = "Library for uploading files in chunks"
repository = "https://github.com/live2o3/chua"
homepage = "https://github.com/live2o3/chua"
readme = "README.md"

[dependencies]
chua = { path = ".."}
jni = "0.17.0"
tokio = { version = "0.2", features = ["full"]}
log = "0.4"
lazy_static = "1.4.0"
uuid = "0.8.1"

[target."cfg(target_os = \"android\")".dependencies]
android_logger = "0.9.0"

[lib]
crate-type = ["cdylib"]