[package]
name = "chua4js"
version = "0.1.0"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chua = { path = ".."}
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.17"
web-sys = { version = "0.3.44", features = ["File"]}

[lib]
crate-type = ["cdylib", "rlib"]
