[package]
name = "chua4js"
version = "1.0.0"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"
license = "MIT"
description = "Library for uploading files in chunks"
repository = "https://github.com/live2o3/chua"
homepage = "https://github.com/live2o3/chua"
readme = "README.md"

[dependencies]
chua = { path = ".."}
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.17"
web-sys = { version = "0.3.44", features = ["File"]}

[lib]
crate-type = ["cdylib", "rlib"]
